--- a/.travis.yml
+++ b/.travis.yml
@@ -54,22 +54,31 @@ matrix:
   fast_finish: true
   include:
     # test coding standards
-    - php: 7.1
+#    - php: 7.1
+#      env: TASK_TESTS_PHP=0 TASK_TESTS_CS=1
+#      # overwrite services used for PHP tests
+#      services:
+    # test coding standards
+    - php: 7.0
       env: TASK_TESTS_PHP=0 TASK_TESTS_CS=1
       # overwrite services used for PHP tests
       services:
 
+#    # run tests coverage on PHP 7.1
+#    - php: 7.1
+#      env: TASK_TESTS_COVERAGE=1
+#
+#    - php: 7.0
+#
+#    - php: 5.6
+#
+#    - php: 5.5
+#
+#    - php: 5.4
+
     # run tests coverage on PHP 7.1
-    - php: 7.1
-      env: TASK_TESTS_COVERAGE=1
-
     - php: 7.0
-
-    - php: 5.6
-
-    - php: 5.5
-
-    - php: 5.4
+      env: TASK_TESTS_COVERAGE=1
 
     # Test against HHVM 3.12 LTS version by using trusty
     - php: hhvm-3.12
